weave-ai/env/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: weave-ai
  name: weave-ai
